Fixed horizontal scroll bar on mobile

--- a/css/index.css
+++ b/css/index.css
@@ -410,7 +410,7 @@ footer {
 
     .head1 nav a {
         padding: 10px 0px;
-        margin: 10px 2%;
+        margin: 10px 0%;
         border-bottom: 1px solid gray;
         width: 100%;
         text-align: center;
@@ -427,6 +427,7 @@ footer {
     .main-content {
         padding-bottom: 0px;
         font-size: 1.7rem;
+        width: 95%;
     }
     .top-content {
         flex-direction: column;
@@ -462,6 +463,7 @@ footer {
         padding-left: 3%;
         padding-top: 3%;
         font-size: 1.7rem;
+        width: 100%;
     }
 
 }
